<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_data"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_data" />
        <item
            android:id="@+id/nav_browser"
            android:icon="@drawable/ic_browser2"
            android:title="@string/menu_browser" />
        <item
            android:id="@+id/nav_image_worker"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_image_worker" />
        <item
            android:id="@+id/nav_compass"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_compass" />

        <item
            android:id="@+id/nav_record"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_recording" />

        <item
            android:id="@+id/nav_image_collage"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_collage" />

        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/nav_files_work"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_files_work" />
        <item
            android:id="@+id/nav_http"
            android:icon="@drawable/ic_browser"
            android:title="@string/menu_http" />
        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/ic_browser"
            android:title="@string/menu_map" />
    </group>
</menu>