<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="ru.mirea.karacheviv.mireaproject.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="ru.mirea.karacheviv.mireaproject.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="ru.mirea.karacheviv.mireaproject.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/nav_data"
        android:name="ru.mirea.karacheviv.mireaproject.DataFragment"
        android:label="@string/menu_data"
        tools:layout="@layout/fragment_data" />
    <fragment
        android:id="@+id/nav_browser"
        android:name="ru.mirea.karacheviv.mireaproject.WebView"
        android:label="@string/menu_browser"
        tools:layout="@layout/fragment_web_view" />
    <fragment
        android:id="@+id/nav_image_worker"
        android:name="ru.mirea.karacheviv.mireaproject.ImageSendFragment"
        android:label="@string/menu_image_worker"
        tools:layout="@layout/fragment_image_send" />
    <fragment
        android:id="@+id/nav_compass"
        android:name="ru.mirea.karacheviv.mireaproject.CompassFragment"
        android:label="@string/menu_compass"
        tools:layout="@layout/fragment_compass" />
    <fragment
        android:id="@+id/nav_record"
        android:name="ru.mirea.karacheviv.mireaproject.RecordFragment"
        android:label="@string/menu_recording"
        tools:layout="@layout/fragment_record" />
    <fragment
        android:id="@+id/nav_image_collage"
        android:name="ru.mirea.karacheviv.mireaproject.ImageCollageFragment"
        android:label="@string/menu_collage"
        tools:layout="@layout/fragment_image_collage" />
    <fragment
        android:id="@+id/nav_profile"
        android:name="ru.mirea.karacheviv.mireaproject.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile" />
    <fragment
        android:id="@+id/nav_files_work"
        android:name="ru.mirea.karacheviv.mireaproject.FilesWorkFragment"
        android:label="@string/menu_files_work"
        tools:layout="@layout/fragment_files_work" />
    <fragment
        android:id="@+id/nav_http"
        android:name="ru.mirea.karacheviv.mireaproject.HttpFragment"
        android:label="@string/menu_http"
        tools:layout="@layout/fragment_http" />
    <fragment
        android:id="@+id/nav_map"
        android:name="ru.mirea.karacheviv.mireaproject.MapFragment"
        android:label="@string/menu_map"
        tools:layout="@layout/fragment_map" />
</navigation>